--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "element-plus": "^2.2.25",
+    "pinia": "^2.0.27",
+    "prettier": "^2.8.0",
+    "sass": "^1.56.1",
     "vue": "^3.2.41",
     "vue-router": "4"
   },
