--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@element-plus/icons-vue": "^2.0.10",
     "element-plus": "^2.2.25",
     "pinia": "^2.0.27",
-    "prettier": "^2.8.0",
-    "sass": "^1.56.1",
     "vue": "^3.2.41",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^3.2.0",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "eslint": "^8.28.0",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "^2.8.0",
+    "sass": "^1.56.1",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.3"
