--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sass": "^1.56.1",
     "unplugin-auto-import": "^0.12.0",
     "unplugin-vue-components": "^0.22.11",
+    "vanilla-tilt": "^1.7.3",
     "vite": "^3.2.3"
   }
 }
